--- a/devenir_inge.html
+++ b/devenir_inge.html
@@ -40,66 +40,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-    <style>
-html {
-    font-family: Open Sans,sans-serif;
-}
-
-/* Fil d’Ariane - bloc principal */
-.breadcrumb {
-  background: #fff;
-}
-
-/* Conteneur aligné et flexible */
-.breadcrumb-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 30px 20px 10px;
-  display: flex;
-  align-items: center;
-  gap: 0;
-}
-
-/* Groupe contenu (liens + séparateurs) */
-.breadcrumb-content {
-  display: flex;
-  align-items: center;
-  z-index: 1;
-  font-size: 1.12em;
-}
-
-/* Liens */
-.breadcrumb a {
-  color: #000;
-  text-decoration: none;
-}
-
-.breadcrumb a:hover {
-  text-decoration: underline;
-}
-
-/* Séparateur */
-.breadcrumb .separator {
-  margin: 0 8px;
-  color: #999;
-}
-
-/* Page courante */
-.breadcrumb .current {
-  color: #000;
-  font-weight: 600;
-  margin-left: 4px;
-}
-
-.breadcrumb-line {
-  flex: 1;
-  height: 2px;
-  background: #e30613;
-  margin-left: 15px;
-  align-self: center;
-}
-
-    </style>
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
 <!-- Fil d’Ariane -->
@@ -129,64 +70,7 @@ html {
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-    <style>
-html {
-  font-family: Open Sans,sans-serif;
-}
-/* TEXT_IMG */
-.block-devenir {
-  background: #fff;
-  padding: 60px 20px;
-}
-
-/* Conteneur global */
-.block-container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-/* Titre en haut */
-.block-title {
-  font-size: 42px;
-  font-weight: 700;
-  color: #000;
-  margin-bottom: 40px;
-  text-align: left;
-}
-
-/* Deux colonnes */
-.block-columns-img {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
-/* Colonne texte */
-.block-text {
-  flex: 1;
-  padding-left: 5%;
-}
-
-.block-text p {
-  font-size: 16px;
-  line-height: 1.7;
-  color: #333;
-  margin-bottom: 18px;
-}
-
-/* Colonne image */
-.block-image {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-}
-
-.block-image img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 6px;
-}
-  </style>
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
 <section class="block-devenir">
@@ -233,68 +117,7 @@ html {
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ingénieur par alternance</title>
-  <style>
-html {
-	font-family: Open Sans,sans-serif;
-}
-
-/* BLOCKS */
-/* Conteneur global */
-.block-container {
-	max-width: 1200px;
-	margin: 0 auto;
-}
-/* Deux colonnes */
-.block-columns {
-	display: flex;
-	gap: 40px;
-	align-items: normal;
-}
-
-.block-alternance {
-	margin: 40px auto;
-	border: 2px solid #c8102e;
-	border-radius: 8px;
-	overflow: hidden;
-	background: #fff;
-	box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
-.block-alternance img {
-	width: 100%;
-	height: auto;
-	display: block;
-}
-.block-alternance-content {
-	padding: 24px 30px;
-}
-.block-alternance-content h2 {
-	font-size: 200%;
-	margin-top: 0;
-	margin-bottom: 16px;
-}
-.block-alternance-content p {
-	font-size: 16px;
-	line-height: 1.6;
-	color: #333;
-	margin-bottom: 16px;
-}
-.block-button {
-	margin: auto;
-	text-align: center;
-}
-.block-button a {
-	background-color: #e30613;
-	color: #fff;
-	display: inline-block;
-	padding: .5rem 2rem;
-	border-radius: 3.45rem;
-	font-weight: 700;
-	text-decoration: none;
-}
-.block-button a:hover {
-	text-decoration: underline;
-}
-  </style>
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
 
