--- a/formations.html
+++ b/formations.html
@@ -14,15 +14,28 @@
     </a>
     <nav class="header-nav" aria-label="Navigation principale">
       <ul>
-        <li><a href="ACOMPLETER">Devenir ingénieur</a></li>
-        <li><a href="ACOMPLETER">Formations</a></li>
-        <li><a href="ACOMPLETER">Cycle Post-bac</a></li>
-        <li><a href="ACOMPLETER">Apprentissage</a></li>
-        <li><a href="ACOMPLETER">Contact</a></li>
+        <li><a href="devenir_inge.html">Devenir ingénieur</a></li>
+        <li><a href="formations.html">Formations</a></li>
+        <li><a href="postbac.html">Cycle Post-bac</a></li>
+        <li><a href="apprentissage.html">Apprentissage</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
+<nav class="breadcrumb" aria-label="Fil d'Ariane">
+  <div class="breadcrumb-container">
+    <div class="breadcrumb-content">
+      <a href="index.html">Accueil</a>
+      <span class="separator">›</span>
+      <a href="devenir_inge.html">Devenir ingénieur</a>
+      <span class="separator">›</span>
+      <span class="current">Formations post-bac</span>
+    </div>
+    <div class="breadcrumb-line" aria-hidden="true"></div>
+  </div>
+</nav>
 
   <section class="images">
     <h1 class="page-title">Nos formations ingénieurs</h1>
@@ -73,7 +86,7 @@
           durant ces 3 années si nécessaire.
         </p>
         <div class="block-button">
-          <a href="ACOMPLETER">Découvrir les cycles post-bac</a>
+          <a href="postbac.html">Découvrir les cycles post-bac</a>
         </div>
       </div>
     </section>
@@ -97,9 +110,9 @@
         <div class="footer-col">
           <h3>Devenir ingénieur</h3>
           <ul>
-            <li><a href="ACOMPLETER">Cycle post-bac</a></li>
-            <li><a href="ACOMPLETER">Formation d'ingénieur</a></li>
-            <li><a href="ACOMPLETER">Apprentissage</a></li>
+            <li><a href="postbac.html">Cycle post-bac</a></li>
+            <li><a href="devenir_inge.html">Formation d'ingénieur</a></li>
+            <li><a href="apprentissage.html">Apprentissage</a></li>
           </ul>
         </div>
 
