Modification F41 Header E1 page postbac

--- a/postbac.html
+++ b/postbac.html
@@ -17,7 +17,7 @@
         <li><a href="devenir_inge.html">Devenir ingénieur</a></li>
         <li><a href="formations.html">Formations</a></li>
         <li><a href="postbac.html">Cycle Post-bac</a></li>
-        <li><a href="apprentissage.hmtl">Apprentissage</a></li>
+        <li><a href="apprentissage.html">Apprentissage</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
